[package]
name = "erfars"
version = "0.1.0"
authors = ["Jacob Brooks"]
license = "MIT OR Apache-2.0"
edition = "2024"
description = "Safe Rust bindings to the Essential Routines for Fundamental Astronomy (ERFA) C library."
readme = "README.md"
repository = "https://github.com/JakeEBrooks/erfars"

[build-dependencies]
cc = "1.2.7"
